Fix box-sizing on material-file-uploader

--- a/projects/entropia-io/ngx-material-file-uploader/src/lib/material-file-uploader.component.scss
+++ b/projects/entropia-io/ngx-material-file-uploader/src/lib/material-file-uploader.component.scss
@@ -23,6 +23,7 @@ $placeholder-border-color: #4f4fbd;
     border-radius: $border-radius;
     border: $main-border-width dashed $main-bg-color;
     position: relative;
+    box-sizing: border-box;
   }
 
   .placeholder {
